website/websites/u64q/code/revcomp.6.pypy3.log

Mon, 25 May 2015 10:37:07 GMT

COMMAND LINE:
/usr/bin/pypy3 revcomp.pypy3-6.pypy3 0 < revcomp-input1000.txt

PROGRAM FAILED 


PROGRAM OUTPUT:

  File "revcomp.pypy3-6.pypy3", line 59
    yield v; yield from g
                  ^
SyntaxError: invalid syntax
